polish of teacher home

--- a/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
@@ -2,6 +2,6 @@
 +ActionLink('calendar', 'month').calendar(title="View Calendar") Calendar
 +ActionLink('message', 'page', false, true).messages(title="View Messages") Messages
 +ActionLink('students', 'my').people(title="View People") People
-+ActionLink('grading', 'summaryAll').statistic(title="View Grades") Grades
++ActionLink('grading', 'summaryAll').statistic.grades(title="View Grades") Grades
 +ActionLink('appmarket', 'list').apps(title="View Apps") Apps
 +ActionLink('settings', 'dashboardStudent').settings(title="View Settings") Settings
