--- a/Chalkable.Web/assets/jade/controls/feed-item.jade
+++ b/Chalkable.Web/assets/jade/controls/feed-item.jade
@@ -1,5 +1,8 @@
+mixin Glue_()
+    =[].slice.call(arguments).filter(function (_) { return !/^\s*$/.test(_||'') }).join(' - ')
+
 mixin FeedItem(item, disabled)
-    -VALIDATE_ARG('item', [Object], item)
+    -VALIDATE_ARG('item', [chlk.models.announcement.FeedAnnouncementViewData], item)
     -VALIDATE_ARG('disabled_', [Boolean], disabled)
 
     -var isAdminAnnouncement = item.getAnnouncementTypeId() == chlk.models.announcement.AnnouncementTypeEnum.ADMIN.valueOf()
@@ -8,6 +11,7 @@ mixin FeedItem(item, disabled)
     - itemClasses.push(item.getOwnerAttachmentsCount() > 0 || item.getApplicationsCount() > 0 ? 'has-attachments' : 'no-attachments')
     - itemClasses.push(item.isShowGradingIcon() ? 'is-gradable' : 'non-gradable')
     - itemClasses.push(item.getOwnerAttachmentsCount() == 0 ? 'no-attachment-icon' : 'has-attachments-icon')
+    - itemClasses.push(item.isHiddenFromStudents() ? 'invisible-for-students' : 'visible-for-students')
     -if (isAdminAnnouncement)         itemClasses.push('is-admin')
     -if (item.isComplete())           itemClasses.push('complete')
     -if (item.getApplicationsCount()) itemClasses.push('app-icon')
@@ -16,9 +20,9 @@ mixin FeedItem(item, disabled)
         +ActionLink('announcement', 'star', item.getId().valueOf(), false)(data-tooltip=Msg.Done).star.complete
         +ActionLink('announcement', 'star', item.getId().valueOf(), true)(data-tooltip= Msg.ToDo).star
         +ActionLink('announcement', 'view', item.getId())(class = disabled ? 'disabled' : '').announcement-link
-            .title= item.getAnnouncementTypeName() + (isAdminAnnouncement ? ' ' + Msg.Announcement : '') + ' - ' + item.getClassName()
+            .title: +Glue_(item.getAnnouncementTypeName() + (isAdminAnnouncement ? ' ' + Msg.Announcement : ''), item.getClassName())
             .date= item.getExpiresDate().toString('M d')
             .attachment
                 .grades
                     .visible
-                        .content= [item.getTitle(), item.getShortContent()].filter(function (_) { return !/^\s*$/.test(_||'') }).join(' - ')
+                        .content: +Glue_(item.getTitle(), item.getShortContent())
