--- a/Chalkable.Web/assets/sass2/3_molecules/_classes-bar.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_classes-bar.sass
@@ -35,16 +35,17 @@
       left: 17px
       height: 40px
       width: 45px
-      opacity: .5
+      opacity: .75
       overflow: hidden
 
       IMG
         position: absolute
         top: 0
         left: 0
+        border: 0
 
-        -webkit-filter: invert(100%)
-        filter: invert(100%)
+        //-webkit-filter: invert(100%)
+        //filter: invert(100%)
 
     &:hover
       color: #7b7974
@@ -61,7 +62,7 @@
           opacity: 1
 
         IMG
-          -webkit-filter: invert(0%)
-          filter: invert(0%)
+          //-webkit-filter: invert(0%)
+          //filter: invert(0%)
 
 
