--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -11,8 +11,12 @@
 
 @import "1_quarks/button"
 @import "1_quarks/input"
+@import "1_quarks/anchor"
+
+@import "2_atoms/avatar-wrapper"
 
 @import "3_molecules/layout"
+@import "3_molecules/header"
 @import "3_molecules/sidebar"
 @import "3_molecules/main"
 @import "3_molecules/classes-bar"
