--- a/Chalkable.Web/assets/sass2/1_quarks/_button.sass
+++ b/Chalkable.Web/assets/sass2/1_quarks/_button.sass
@@ -12,3 +12,8 @@ button, input[type=button], input[type=submit], input[type=reset]
   font-weight: 600
   color: #56554f
   +text-shadow(transparentize(#fff, .5) 0 1px 0px)
+
+
+  &.disabled, &[disabled]
+    background-color: #999
+    color: #eee
