--- a/Chalkable.Web/assets/sass2/3_molecules/_layout.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_layout.sass
@@ -8,12 +8,6 @@ header
   padding: 0 1px
   background: image-url("images2/chalkable.png") 1px 0 no-repeat
   height: 69px
-  line-height: 69px
-  vertical-align: middle
-  text-align: right
-
-  *
-    display: inline
 
 footer
   line-height: 76px
@@ -25,5 +19,8 @@ footer
   background: #ffffff
   border: 1px solid #c8c7c3
   +box-shadow(transparentize(#000, .82) 0 2px 5px)
-
   vertical-align: top
+
+
+#chlk-pop-up-container
+  position: absolute
