--- a/Chalkable.Web/assets/jade/controls/log-out.jade
+++ b/Chalkable.Web/assets/jade/controls/log-out.jade
@@ -2,4 +2,5 @@ mixin Logout(controller, action, userName)
     .wrapper
         BUTTON.blue.logout-area= userName
         .logout
+            a.inow(href="/User/RedirectToINow.aspx") Go to INOW
             +ActionLink(controller, action) log out
