--- a/Chalkable.Web/assets/sass2/3_molecules/_header.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_header.sass
@@ -10,7 +10,7 @@ header
 
   A
     color: #fff
-    +text-shadow(transparentize(#000, .75) 0 1px 1px)
+    +text-shadow(transparentize(#fff, .5) 0 1px 1px)
 
   .blue
     cursor: pointer
@@ -54,10 +54,7 @@ header
       font-weight: 600
       line-height: 18px
       text-align: center
-
-      text-overflow: ellipsis
       overflow: hidden
-
 
   .logout
     visibility: hidden
@@ -79,6 +76,8 @@ header
     background: #fff
 
     A
+      display: block
+      text-align: center
       color: #56554f
       text-decoration: none
       &:hover
@@ -98,6 +97,12 @@ header
       height: 24px
       width: 24px
       +icons-sprite(dropdown-btn-white)
+
+  A.inow
+    display: none
+
+  .has-inow-link A.inow
+    display: block
 
 
 #siteSearch
