--- a/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
+++ b/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
@@ -25,6 +25,7 @@ mixin ApiCallForm(controllerInfo, role)
                                 +Hidden('apiCallRole', role)
                                 +Hidden('controllerName', controllerInfo.getName())
                                 +Hidden('methodName', cntMethod.getName())
+                                +Hidden('response', cntMethod.getResponse())
                                 +Hidden('apiFormId', apiFormId)
                                 if methodParams.length > 0
                                     table
