--- a/Chalkable.Web/assets/sass2/2_atoms/_avatar-wrapper.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_avatar-wrapper.sass
@@ -44,3 +44,7 @@
 
   .person-avatar-w-#{$size}::before
     background-image: image-url("avatars/" + $size + "/.no-avatar-female.png")
+
+
+.avatar-block-left
+  padding-right: 85px - 47px
