--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -2,6 +2,7 @@
 @import "compass/css3/box-shadow"
 @import "compass/css3/text-shadow"
 @import "compass/css3/transition"
+@import "compass/css3/transform"
 
 //@import "animation/animate"
 
@@ -12,8 +13,10 @@
 @import "1_quarks/button"
 @import "1_quarks/input"
 @import "1_quarks/anchor"
+@import "1_quarks/table"
 
 @import "2_atoms/avatar-wrapper"
+@import "2_atoms/chat-bubble"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
@@ -22,3 +25,5 @@
 @import "3_molecules/classes-bar"
 @import "3_molecules/action-bar"
 @import "3_molecules/chlk-grid"
+
+@import "7_controls/close-open-control"
