--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -64,7 +64,7 @@ mixin Glue_()
                 .description
                     .chat-bubble
                         h2(class=self.getExpiresDateColor())=self.getExpiresDateText()
-                        p: +Glue_(item.getTitle(), self.getContent())
+                        p: +Glue_(self.getTitle(), self.getContent())
 
                         if self.getStandards() && self.getStandards().length > 0
                             .standards-container
