--- a/Chalkable.Web/assets/sass2/2_atoms/_chat-bubble.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_chat-bubble.sass
@@ -17,3 +17,9 @@
     height: 12px
     pointer-events: none
     border-width: 1px 1px 0 0
+
+
+  &.top::before
+    +rotate(-45deg)
+    top: -7px
+    left: 17px
