--- a/Chalkable.Web/assets/sass2/1_quarks/_button.sass
+++ b/Chalkable.Web/assets/sass2/1_quarks/_button.sass
@@ -35,6 +35,12 @@ button, input[type=button], input[type=submit], input[type=reset]
 
   &.disabled, &[disabled]
     background-color: #999
-    color: #eee
+    color: #888
+    +box-shadow(transparentize(#000, .5) 0 1px 3px, transparentize(#fff, .22) 0 1px 0px inset)
+    border-color: #666
+    +background-image(linear-gradient(top, #ccc 0%, transparentize(#ccc, 1) 100%))
+    +text-shadow(transparentize(#fff, .5) 0 1px 1px)
+    cursor: default
+
 
 
