fixed CHLK-3221 Teacher. Grades. Grid. Avg won't be rounded if "Round Displayed Averages" option is active

--- a/Chalkable.Web/assets/jade/activities/grading/StudentAverage.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/StudentAverage.jade
@@ -1,5 +1,5 @@
-displayValue = self.getModel().displayAvgGradeValue(self.isAbleDisplayAlphaGrades())
-originalValue = self.getModel().displayAvgGradeValue(self.isAbleDisplayAlphaGrades(), true)
+displayValue = self.getModel().displayAvgGradeValue(self.isAbleDisplayAlphaGrades(), false, null, self.isRoundDisplayedAverages())
+originalValue = self.getModel().displayAvgGradeValue(self.isAbleDisplayAlphaGrades(), true, null, self.isRoundDisplayedAverages())
 edited = self.getEnteredAvg() || self.getEnteredAvg() == 0 || self.getEnteredAlphaGrade()
 div(
     data-isexempt= self.isExempt(),
